start architecture js

--- a/Select/package.json
+++ b/Select/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "select",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "sass": "^1.28.0"
+    "parcel-bundler": "^1.12.4"
   }
 }
